--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="index.html">ABOUT</a></li>
                     <li><a href="#">FIELDS</a></li>
-                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="./Computer history.html">Computer History</a></li>
                     <li><a href="#">CREATORS</a></li>
                 </ul>
             </nav>
@@ -54,13 +54,15 @@
 
         </div>
     </section>
-    <script src="./js/particles.min.js"></script>
-    <script src="./js/deepMerge.js"></script>
-    <script src="./js/main.js"></script>
+</body>
+<!-- vendors -->
+<script src="./js/particles.min.js"></script>
+<script src="./js/deepMerge.js"></script>
+<script src="./js/main.js"></script>
 
-    <body>
-        <!-- js files -->
-        <script src="./js/script.js"></script>
+
+<!-- js files -->
+<script src="./js/navbar.js"></script>
 
 
 </html>
